--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,56 @@
     padding: 0;
     box-sizing: border-box;
 }
+:root{
+    --textColor:#ffffff;
+    --primary:#000000;
+    --secondary:#727272;
+    --body:#c0c0c0;
+    --contentPrimary:#524fff;
+    --contentSecondary:#ffc900;
+    --accentPrimary:#524fff;
+    --accentSecondary:#ffc900;
+}
 /* How to remove a scrolbar */
 ::-webkit-scrollbar{
     display: none;
 }
+
+.header{
+    display: flex;
+    flex: row nowrap;
+    justify-content: center;
+    align-items: center;
+    width:100vw;
+    height: 80px;
+    background-color: var(--primary);
+}
+.logo{
+    position: absolute;
+    left:0;
+    top:0;
+    /* background-color: var(--accentPrimary); */
+}
+.logo img{
+    width: 100px;
+    height: 80px;
+}
+ul{
+    list-style-type:none;
+}
+li{
+    display: inline;
+}
+li a{
+    text-decoration: none;
+    color:var(--textColor);
+    font-size: 1.25rem;
+    padding: 0.5rem;
+    margin:0 5px 0 5px;
+
+    &:hover{
+        color: var(--accentPrimary);
+    }
+}
+
+
