--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,8 @@ body {
 /* header */
 .header {
   display: flex;
+  position: fixed;
+  z-index: 9;
   flex: row nowrap;
   justify-content: center;
   align-items: center;
@@ -45,7 +47,6 @@ body {
   position: absolute;
   left: 0;
   top: 0;
-  /* background-color: var(--accentPrimary); */
 }
 
 .logo img {
@@ -81,10 +82,24 @@ li a {
 .business-name {
   font-family: "Lobster", sans-serif;
   font-size: 10rem;
+  margin:0px;
+  padding: 3rem 0 0;
+  animation-name: hero;
+  animation-duration: 10s;
+  animation-iteration-count: infinite;
 }
 
+  
+  @keyframes hero {
+    0%   {color:var(--textColor);}
+    25%  {color:var(--accentPrimary);}
+    50%  {color:var(--accentSecondary);}
+    75%  {color:var(--accentPrimary);}
+    100% {color:var(--textColor);}
+  }
+
 img[alt="tshirtImage"] {
-  width: 20rem;
+  width: 25rem;
 }
 
 .business-description-container {
@@ -93,79 +108,124 @@ img[alt="tshirtImage"] {
 
 .description-item {
   width: 50%;
+  background-color: #000000;
+  padding: 2rem 0px;
 }
 
 .description-text p {
-  width: 70%;
-  margin-top: 3rem;
+    text-align: left;
+    color: var(--textColor);
+  width: 90%;
 }
 
 .description-text {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
 }
-
-#business-description {
-  margin: 5rem auto;
+.description-text h1{
+    color: var(--textColor);
+    font-weight: bolder;
+    padding-bottom: 5rem;
+}
+.description-text h1:hover{
+    color: var(--accentSecondary);
+    transition: ease-in-out 0.1;
 }
 
 /* example products section */
-#sample-products {
-  margin-top: 7rem;
+.header-black{
+    color: var(--primary);
+    background-color: var(--textColor);
+    font-size: 3rem;
+    font-weight: bolder;
+    padding: 2rem 0 2rem;
 }
 
 .sample-image {
   width: 100%;
   border-radius: 7px;
+  border:5px solid var(--accentPrimary);
+  transition: ease-in 0.1s;
+}
+.sample-image:hover {
+ scale: 1.05;
+ transition: ease-in-out 0.2s;
 }
 
 .products-container {
+  overflow: hidden;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   justify-content: center;
-  padding: 4rem 8rem;
-  gap: 10px;
+  align-items: center;
+  padding: 4rem 1rem;
+  gap: 16px;
+  background-color: var(--primary);
+  
 }
 
 .sample1 {
   grid-column: 4 / 5;
-  grid-row: 2;
+  grid-row: 2 / 3;
+  
 }
 
 .sample2 {
   grid-column: 1 / 2;
-  grid-row: 2;
+  grid-row: 2 / 3;
+ 
 }
 
 .sample3 {
   grid-column: 3 / 4;
-  grid-row: 1;
+  grid-row: 1 / 2;
+  background-color: var(--contentPrimary);
+  width: 100%;
+  height: 100%;
 }
 
 .sample4 {
   grid-column: 2 / 3;
-  grid-row: 1;
+  grid-row: 1 / 2;
+  background-color: var(--contentPrimary);
+  width: 100%;
+  height: 100%;
 }
 
 .sample5 {
   grid-column: 2 / 3;
-  grid-row: 2;
+  grid-row: 2 / 3;
+  background-color: var(--contentPrimary);
+  width: 100%;
+  height: 100%;
 }
 
 .sample6 {
   grid-column: 4 / 5;
-  grid-row: 1;
+  grid-row: 1 / 2;
 }
 
 .sample7 {
   grid-column: 3 / 4;
-  grid-row: 2;
+  grid-row: 2 / 3;
+  background-color: var(--contentPrimary);
+  width: 100%;
+  height: 100%;
+}
+.sample8 {
+  grid-column: 1 / 2;
+  grid-row: 1 / 2;
+  background-color: var(--primary);
+  width: 100%;
+  height: 40%;
 }
 
-#design-shirt-section {
-  margin-top: 7rem;
+#design-funko-section {
+  background-color: var(--primary);
+  margin-bottom: 1rem;
+  color: var(--textColor);
 }
 
 .see-designs-btn {
@@ -181,8 +241,3 @@ img[alt="tshirtImage"] {
   margin: 4rem auto;
   width: 18rem;
 }
-
-/* .card img{
-  width: 4rem;
-
-} */
