--- a/css/style.css
+++ b/css/style.css
@@ -241,3 +241,11 @@ img[alt="tshirtImage"] {
   margin: 4rem auto;
   width: 18rem;
 }
+
+.FLogo {
+  width: 7rem;
+}
+
+footer {
+  background-color: #000000;
+}
